Closed
Bug 1686271
Opened 4 years ago
Closed 4 years ago
Intermittent toolkit/components/extensions/test/xpcshell/test_ext_storage_idb_data_migration.js | application crashed [@ mozilla::dom::quota::Qu | After Assertion failure: inactiveOriginsSorted, at /builds/worker/checkouts/gecko/dom/quota/ActorsParent.cpp
Categories
(Core :: Storage: Quota Manager, defect)
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | disabled |
People
(Reporter: intermittent-bug-filer, Assigned: sg)
References
(Regression)
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=326467724&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/IqD9ijgUSxCkppfXRXqX3w/runs/0/artifacts/public/logs/live_backing.log
[task 2021-01-12T16:43:53.904Z] 16:43:53 INFO - <<<<<<<
[task 2021-01-12T16:44:00.862Z] 16:44:00 WARNING - PROCESS-CRASH | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_storage_idb_data_migration.js | application crashed [@ mozilla::dom::quota::QuotaManager::CollectOriginsForEviction(unsigned long long, nsTArray<RefPtr<mozilla::dom::quota::DirectoryLockImpl> >&)]
[task 2021-01-12T16:44:00.863Z] 16:44:00 INFO - Mozilla crash reason: MOZ_ASSERT(inactiveOriginsSorted)
[task 2021-01-12T16:44:00.863Z] 16:44:00 INFO - Crash dump filename: c:\users\task_1610468436\appdata\local\temp\xpc-other-k6vclv\f424cc73-4583-43f9-b3be-16d0119d00c7.dmp
[task 2021-01-12T16:44:00.864Z] 16:44:00 INFO - Operating system: Windows NT
[task 2021-01-12T16:44:00.864Z] 16:44:00 INFO - 10.0.17134
[task 2021-01-12T16:44:00.865Z] 16:44:00 INFO - CPU: amd64
[task 2021-01-12T16:44:00.865Z] 16:44:00 INFO - family 6 model 85 stepping 4
[task 2021-01-12T16:44:00.865Z] 16:44:00 INFO - 8 CPUs
[task 2021-01-12T16:44:00.866Z] 16:44:00 INFO - GPU: UNKNOWN
[task 2021-01-12T16:44:00.866Z] 16:44:00 INFO - Crash reason: EXCEPTION_BREAKPOINT
[task 2021-01-12T16:44:00.867Z] 16:44:00 INFO - Crash address: 0x734ba499
[task 2021-01-12T16:44:00.867Z] 16:44:00 INFO - Process uptime: 3 seconds
[task 2021-01-12T16:44:00.868Z] 16:44:00 INFO - Thread 28 (crashed)
[task 2021-01-12T16:44:00.868Z] 16:44:00 INFO - 0 xul.dll!mozilla::dom::quota::QuotaManager::CollectOriginsForEviction(unsigned long long, nsTArray<RefPtr<mozilla::dom::quota::DirectoryLockImpl> >&) [ActorsParent.cpp:cfa1b7fc36a0b11682952b19d614d0818f317974 : 3937 + 0x0]
[task 2021-01-12T16:44:00.869Z] 16:44:00 INFO - rax = 0x00007fff78dda447 rdx = 0x00007fffb21ba640
[task 2021-01-12T16:44:00.869Z] 16:44:00 INFO - rcx = 0x00007fffa707d7f8 rbx = 0x0000000e47f2f1a0
[task 2021-01-12T16:44:00.870Z] 16:44:00 INFO - rsi = 0x0005b8b6b9c01448 rdi = 0x0000019a778197c0
[task 2021-01-12T16:44:00.870Z] 16:44:00 INFO - rbp = 0xfffffffffffffffe rsp = 0x0000000e47f2f120
[task 2021-01-12T16:44:00.871Z] 16:44:00 INFO - r8 = 0x0000000e47f29168 r9 = 0x0000000000000000
[task 2021-01-12T16:44:00.872Z] 16:44:00 INFO - r10 = 0x0000000000000000 r11 = 0x0000000e47f2a7b0
[task 2021-01-12T16:44:00.872Z] 16:44:00 INFO - r12 = 0x0000019a7703a600 r13 = 0x0000000e47f2f1d8
[task 2021-01-12T16:44:00.873Z] 16:44:00 INFO - r14 = 0x00007fff784d7c80 r15 = 0x0000000e47f2f1e0
[task 2021-01-12T16:44:00.873Z] 16:44:00 INFO - rip = 0x00007fff734ba499
[task 2021-01-12T16:44:00.874Z] 16:44:00 INFO - Found by: given as instruction pointer in context
[task 2021-01-12T16:44:00.874Z] 16:44:00 INFO - 1 xul.dll!mozilla::dom::quota::`anonymous namespace'::CollectOriginsHelper::Run() [ActorsParent.cpp:cfa1b7fc36a0b11682952b19d614d0818f317974 : 8000 + 0xf]
[task 2021-01-12T16:44:00.875Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.875Z] 16:44:00 INFO - rsp = 0x0000000e47f2f250 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.876Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.876Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff734fc4b8
[task 2021-01-12T16:44:00.877Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.877Z] 16:44:00 INFO - 2 xul.dll!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:cfa1b7fc36a0b11682952b19d614d0818f317974 : 1200 + 0xd]
[task 2021-01-12T16:44:00.878Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.878Z] 16:44:00 INFO - rsp = 0x0000000e47f2f2c0 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.879Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.879Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff6f985cd2
[task 2021-01-12T16:44:00.880Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.880Z] 16:44:00 INFO - 3 xul.dll!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:cfa1b7fc36a0b11682952b19d614d0818f317974 : 548 + 0x14]
[task 2021-01-12T16:44:00.881Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.882Z] 16:44:00 INFO - rsp = 0x0000000e47f2f460 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.882Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.883Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff6f98c9f2
[task 2021-01-12T16:44:00.883Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.884Z] 16:44:00 INFO - 4 xul.dll!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:cfa1b7fc36a0b11682952b19d614d0818f317974 : 332 + 0xa]
[task 2021-01-12T16:44:00.884Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.885Z] 16:44:00 INFO - rsp = 0x0000000e47f2f4b0 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.886Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.886Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff70268c53
[task 2021-01-12T16:44:00.887Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.887Z] 16:44:00 INFO - 5 xul.dll!MessageLoop::RunHandler() [message_loop.cc:cfa1b7fc36a0b11682952b19d614d0818f317974 : 327 + 0x8]
[task 2021-01-12T16:44:00.888Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.888Z] 16:44:00 INFO - rsp = 0x0000000e47f2f520 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.889Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.890Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff70201bc0
[task 2021-01-12T16:44:00.890Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.891Z] 16:44:00 INFO - 6 xul.dll!MessageLoop::Run() [message_loop.cc:cfa1b7fc36a0b11682952b19d614d0818f317974 : 309 + 0x5]
[task 2021-01-12T16:44:00.891Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.892Z] 16:44:00 INFO - rsp = 0x0000000e47f2f570 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.892Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.893Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff70201a82
[task 2021-01-12T16:44:00.893Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.894Z] 16:44:00 INFO - 7 xul.dll!static nsThread::ThreadFunc(void*) [nsThread.cpp:cfa1b7fc36a0b11682952b19d614d0818f317974 : 441 + 0x8]
[task 2021-01-12T16:44:00.895Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.895Z] 16:44:00 INFO - rsp = 0x0000000e47f2f5c0 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.895Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.896Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff6f9820cd
[task 2021-01-12T16:44:00.896Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.897Z] 16:44:00 INFO - 8 nss3.dll!PR_NativeRunThread(void*) [pruthr.c:cfa1b7fc36a0b11682952b19d614d0818f317974 : 399 + 0xe]
[task 2021-01-12T16:44:00.897Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.898Z] 16:44:00 INFO - rsp = 0x0000000e47f2f790 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.899Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.899Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff9cfe0322
[task 2021-01-12T16:44:00.900Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.900Z] 16:44:00 INFO - 9 nss3.dll!pr_root(void*) [w95thred.c:cfa1b7fc36a0b11682952b19d614d0818f317974 : 139 + 0xd]
[task 2021-01-12T16:44:00.901Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.901Z] 16:44:00 INFO - rsp = 0x0000000e47f2f810 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.902Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.902Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fff9cfd0cc1
[task 2021-01-12T16:44:00.903Z] 16:44:00 INFO - Found by: call frame info
[task 2021-01-12T16:44:00.903Z] 16:44:00 INFO - 10 ucrtbase.dll!RtlpHpSegPageRangeShrink + 0xda
[task 2021-01-12T16:44:00.904Z] 16:44:00 INFO - rbx = 0x0000000e47f2f1a0 rbp = 0xfffffffffffffffe
[task 2021-01-12T16:44:00.905Z] 16:44:00 INFO - rsp = 0x0000000e47f2f840 r12 = 0x0000019a7703a600
[task 2021-01-12T16:44:00.905Z] 16:44:00 INFO - r13 = 0x0000000e47f2f1d8 r14 = 0x00007fff784d7c80
[task 2021-01-12T16:44:00.906Z] 16:44:00 INFO - r15 = 0x0000000e47f2f1e0 rip = 0x00007fffb20ec4be
[task 2021-01-12T16:44:00.906Z] 16:44:00 INFO - Found by: call frame info```
Updated•4 years ago
|
Has Regression Range: --- → yes
Keywords: regression
| Assignee | ||
Updated•4 years ago
|
OS: Unspecified → Windows
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → sgiesecke
Status: NEW → ASSIGNED
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1682543
status-firefox84:
--- → unaffected
status-firefox85:
--- → unaffected
status-firefox86:
--- → affected
status-firefox-esr78:
--- → unaffected
| Assignee | ||
Comment 3•4 years ago
|
||
Setting release status to disabled, given the issue is just a bad debug assertion.
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/60625635f86d
Fix sort predicate in assertion in QuotaManager::CollectOriginsForEviction. r=dom-workers-and-storage-reviewers,janv
Comment 5•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•