Bug 1686271 - Fix sort predicate in assertion in QuotaManager::CollectOriginsForEviction. r=dom-workers-and-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D101562